0.2.4
-----
- KSP 1.3.1
- Dependency updates
- Changed fusion reactor module name to fix conflict with DSEV
- Added some indications of fuel tank ratios to some engines

0.2.3
-----
- Fixed a bug where a field for the fusion reactor was visible in the VAB when it shouldn't be
- Fixed some fusion reactor localization bugs
- Fixed an issue where fusion reactors would shut down on startup when using D-He3 mode
- Added new functionality to Metallic H2 engine, can vary mixing ratio. Higher ratio = lower heat and performance, lower ratio = higher heat and performance

0.2.2
-----
- Added FX-2 Fusion Reactor
-- 2.5m fusion reactor, 4-8 MW power output
- Added FX-3 Fusion Reactor
-- 3.75m fusion reactor, 10-20 MW power output
- Added Asimov Fission Fragment Rocket
-- Very low TWR rocket with integrated fuel, very high specific impulse, low heat generation, no EC consumption past charging
- Increased thrust of Z-pinch fusion engine to 375 from 160
- Reduced constant power usage of both Z-Pinch engines by 50%, now 50/65 kW from 100/125 kW
- Reduced constant power usage of tokamak fusion engine from 125 to 75 kW
- Reduced mass of magnetic ICF to 20 from 25 t, reduced heat generation by 2/3
- Reduced mass of Casaba to 11.5 from 15.82, decreased Ablator to 4250
- Tweaked propellant ratios of Casaba so that the consumption of all the Ablator requires exactly 1/2 an antimatter storage ring and 1 small full fission pellet tanks
- Increased Isp of Microstar to 90950 from 60950, increased thrust to 150 kN from 60 kN
- Tweaked propellant ratios of Microstar so that 1 full short 3.75m fusion fuel tank takes very close to 1 full antimatter ring to consume
- Reduced Antimatter consumption of the Dirac by 75% in Medium Density mode
- Increased thrust of Dirac in Medium Density mode to 190 from 122, increased Isp to 75,250 from 55,000 s
- Increased thrust of Dirac in High Density mode to 870 from 720