@@ -3,6 +3,7 @@
 - KSP 1.3.1
 - Dependency updates
 - Changed fusion reactor module name to fix conflict with DSEV
+- Made ModuleMultiRatioEngine configurable with MinMixingRatio and MaxMixingRatio fields. Note that the RatioScale must map correctly to changed values. 
 - Added some indications of fuel tank ratios to some engines
 
 0.2.3
